prevented horizontal scrolling of menu toggle

--- a/_sass/layouts/_nav.scss
+++ b/_sass/layouts/_nav.scss
@@ -1,4 +1,8 @@
 // Nav
+body.menu-is-open { //prevents horizontal scrolling of menu toggle
+  position: fixed;
+  height: 100vh;
+}
 // The menu toggle icon (hamburger icon)
 .i-menu {
   position: relative;
@@ -106,7 +110,7 @@
   text-align: center;
   background: $color-primary;
   @media (min-width: $bp-medium) {
-      background-image: url('../assets/images/bg-palms.jpg');
+      background-image: url('../assets/images/bg-palms-night.jpg');
       background-position: center center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -118,7 +122,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba($color-black, 0.9);
+    background: rgba($color-primary, 0.85);
   }
 }
 @media (480px) {
